<resources>
    <string name="app_name">Склад</string>
    <string name="msg_list_empty">Пусто</string>

    <!-- Activity Label -->
    <string name="activity_main">@string/app_name</string>
    <string name="title_activity_about">О программе</string>
    <string name="title_activity_unit">Единицы измерения</string>
    <string name="title_activity_unit_detail">Единица измерения</string>
    <string name="title_activity_nomenclature">Номенклатура</string>
    <string name="title_activity_nomenclature_detail">Номенклатура</string>
    <string name="title_activity_store">Склады</string>
    <string name="title_activity_store_detail">Склад</string>
    <string name="title_activity_invoice">Товарные накладные</string>
    <string name="title_activity_invoice_detail">Товарная накладная</string>

    <!-- Nav -->
    <string name="title_nav_item_unit">@string/title_activity_unit</string>
    <string name="title_nav_item_store">@string/title_activity_store</string>
    <string name="title_nav_item_nomenclature">@string/title_activity_nomenclature</string>
    <string name="title_nav_item_about">@string/title_activity_about</string>
    <string name="title_nav_item_receipt_product_invoice">@string/title_activity_invoice</string>

    <!-- Main -->
    <string name="title_nav_drawer_open">Отркыть меню</string>
    <string name="title_nav_drawer_close">Закрыть меню</string>

    <!-- Invoice -->
    <string name="item_price_format">%1$s р.</string>

    <!-- Invoice Detail -->
    <string name="hint_invoice_store">Склад</string>
    <string name="hint_invoice_date">Дата</string>
    <string name="hint_invoice_name">Номер накладной</string>
    <string name="item_product_price_format">Цена: %1$s р.</string>
    <string name="item_product_amount_format">Количество: %1$s (%2$s)</string>
    <string name="item_product_sum_format">%1$s р.</string>
    <string name="action_invoice_save">Сохранить</string>

    <!-- Product -->
    <string name="hint_product_amount">Количество</string>
    <string name="hint_product_price">Цена</string>
    <string name="title_alert_product">Товар</string>
    <string name="action_alert_product_positive">Сохранить</string>
    <string name="action_alert_product_negative">Отмена</string>



    <!-- Nomenclature -->
    <string name="msg_unit_item_name_format">%1$s (%2$s)</string>
    <string name="error_nomenclature_used_removed">Удалеине не возможно номенклатура используется</string>

    <!-- Nomenclature Detail -->
    <string name="msg_nomenclature_name">Название</string>
    <string name="msg_nomenclature_unit">Единица измерения</string>
    <string name="action_nomenclature_save">Сохранить</string>
    <string name="error_nomenclature_field_empty">Заполните поле</string>
    <string name="error_nomenclature_unit_empty">Не создано не одной единицы измерения</string>
    <string name="msg_nomenclature_unit_list_item_name_format">%1$s</string>

    <!-- Store -->
    <string name="error_store_used_removed">Удалеине не возможно, склад используется</string>

    <!-- Store Detail -->
    <string name="msg_store_name">Название</string>
    <string name="action_store_save">Сохранить</string>
    <string name="error_store_field_empty">Заполните поле</string>

    <!-- Unit -->
    <string name="error_unit_used_removed">Удалеине не возможно единица измерения используется</string>

    <!-- Unit Detail -->
    <string name="msg_unit_name">Название</string>
    <string name="msg_unit_symbol">Обозначение</string>
    <string name="msg_unit_description">Описание</string>
    <string name="action_unit_save">Сохранить</string>
    <string name="error_unit_field_empty">Заполните поле</string>

    <!-- About -->
    <string name="title_app_version_format">Склад\nверсия %1$s (сборка %2$d)</string>
    <string name="msg_app_description">Приложение разработано студентом группы 12ИЭ1бзу Анниным П.А.,
        в качестве курсовой работы по дисциплине "Программная инженерия". Вариант 16.</string>
    <string name="msg_app_copyright">Copyright 2016, Pavel Annin
        \nLicensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        \nYou may obtain a copy of the License at
        \nhttp://www.apache.org/licenses/LICENSE-2.0
        \nUnless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        \nSee the License for the specific language governing permissions and
        limitations under the License.</string>
    <string name="msg_app_dependencies">При разработке использовались сторонние зависимости:
        \n    • Realm v1.0.0 (https://github.com/realm/realm-java), Apache 2.0 license;
        \n    • RxJava v1.1.5 (https://github.com/ReactiveX/RxJava), Apache 2.0 license;
        \n    • RxAndroid v1.2.0 (https://github.com/ReactiveX/RxAndroid), Apache 2.0 license;
        \n    • RetroLambda v3.3.0-beta4 (https://github.com/evant/gradle-retrolambda), Apache 2.0 license.
    </string>
    <string name="error_field_empty">Заполните поле</string>

</resources>
