<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/action_nav_card_producat"
            android:icon="@drawable/ic_book"
            android:title="@string/title_nav_item_card_product" />

        <item
            android:id="@+id/action_nav_store"
            android:icon="@drawable/ic_book"
            android:title="@string/title_nav_item_store" />

        <item
            android:id="@+id/action_nav_units"
            android:icon="@drawable/ic_book"
            android:title="@string/title_nav_item_unit" />
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/action_nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/title_nav_item_about" />
    </group>

</menu>