<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_about">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/txt_app_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            tools:text="@string/title_app_version_format" />

        <TextView
            android:id="@+id/txt_app_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/msg_app_description"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="@string/msg_app_description" />

        <TextView
            android:id="@+id/txt_app_dependencies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/msg_app_dependencies"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:text="@string/msg_app_dependencies" />

        <TextView
            android:id="@+id/txt_app_copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/msg_app_copyright"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:text="@string/msg_app_copyright" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>