<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016, Pavel Annin
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.presenter.activity.AboutActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/txt_app_version"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                tools:text="@string/title_app_version_format" />

            <TextView
                android:id="@+id/txt_app_description"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/msg_app_description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:text="@string/msg_app_description" />

            <TextView
                android:id="@+id/txt_app_dependencies"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/msg_app_dependencies"
                android:textAppearance="?android:attr/textAppearanceSmall"
                tools:text="@string/msg_app_dependencies" />

            <TextView
                android:id="@+id/txt_app_copyright"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/msg_app_copyright"
                android:textAppearance="?android:attr/textAppearanceSmall"
                tools:text="@string/msg_app_copyright" />

        </GridLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@drawable/ic_nav_back"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/title_activity_about"
            app:titleTextColor="@color/text" />

    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>